# smart-rewind-video-uploader

./: .gitignore  README.md  pyproject.toml  requirements.txt  upload.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2e191932912c797d_compressor_py.html  z_2e191932912c797d_iam_py.html  z_2e191932912c797d_person_tracking_py.html  z_2e191932912c797d_rekognition_objects_py.html  z_2e191932912c797d_rekognition_py.html  z_2e191932912c797d_sns_py.html  z_2e191932912c797d_sqs_py.html  z_2e191932912c797d_timeline_segment_py.html  z_2e191932912c797d_video_py.html  z_52d980c113c8a28c_test_compressor_py.html  z_52d980c113c8a28c_test_iam_py.html  z_52d980c113c8a28c_test_rekognition_py.html  z_52d980c113c8a28c_test_s3_py.html  z_52d980c113c8a28c_test_sns_py.html  z_52d980c113c8a28c_test_sqs_py.html  z_68fa91acab3ed412_test_person_tracking_py.html  z_68fa91acab3ed412_test_scene_segment_py.html  z_70fd250492c592e0_test_basic_py.html  z_b9ef4170ab355ea8_char_segment_py.html  z_b9ef4170ab355ea8_compressor_py.html  z_b9ef4170ab355ea8_iam_py.html  z_b9ef4170ab355ea8_main_process_py.html  z_b9ef4170ab355ea8_rekognition_objects_py.html  z_b9ef4170ab355ea8_rekognition_py.html  z_b9ef4170ab355ea8_s3_py.html  z_b9ef4170ab355ea8_scene_segment_py.html  z_b9ef4170ab355ea8_sns_py.html  z_b9ef4170ab355ea8_sqs_py.html  z_cbfcd33bb64b178a_iam_py.html  z_cbfcd33bb64b178a_rekognition_py.html  z_cbfcd33bb64b178a_s3_py.html  z_cbfcd33bb64b178a_sns_py.html  z_cbfcd33bb64b178a_sqs_py.html  z_fac7891346de80ef_test_compressor_py.html  z_fac7891346de80ef_test_iam_py.html  (+6 more)
(+78 files in other folders)
