[project]
requires-python = ">= 3.8"
name="smartrewind"
version="0.1.0"
description="Smart Rewind Video Player for Accessibility Interventions"
dependencies=[
    "boto3",
    "botocore"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage]
    [tool.coverage.run]
    omit = [
        "smartrewind/main.py"
    ]

    [tool.coverage.report]
    skip_empty = true

[tool.pytest.ini_options]
markers = [
    "unittest: mark as a unit test",
    "integrationtest: mark as an integration test",
    "functionaltest: mark as a functional test"
]